update clear filters logic

--- a/server/views/pages/applications/list/partials/filter.njk
+++ b/server/views/pages/applications/list/partials/filter.njk
@@ -183,7 +183,7 @@
       optionsHtml: filterOptionsHtml,
       selectedFilters: {
         heading: { text: "Selected filters" },
-        clearLink: { text: "Clear filters", href: "/applications" },
+        clearLink: { text: "Clear filters", href: "/applications?clearFilters=true" },
         categories: categories
       }
     }) }}
