--- a/server/views/pages/applications/action/macro.njk
+++ b/server/views/pages/applications/action/macro.njk
@@ -6,19 +6,14 @@
       <dt class="govuk-summary-list__key">Application type</dt>
       <dd class="govuk-summary-list__value">{{ applicationType.name }}</dd>
     </div>
-
-    {% if applicationType.name in [
-      "Add a social PIN phone contact",
-      "Add an official PIN phone contact",
-      "Remove a PIN phone contact"
-    ] %}
+    {% if applicationType.id in [2, 3, 4] %}
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">Contact</dt>
       <dd class="govuk-summary-list__value">{{ application.requests[0].firstName }} {{ application.requests[0].lastName }}</dd>
     </div>
     {% endif %}
 
-    {% if applicationType.name == "Add emergency phone credit" %}
+    {% if applicationType.id == 1 %}
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">Amount</dt>
       <dd class="govuk-summary-list__value">£{{ application.requests[0].amount }}</dd>
