RA-669: implement address autosuggest shared component (#323)
* implement address autosuggest shared component

* fix data/index.ts

* update app data

* fix lint

* fix e2e tests

* update health e2e test

* update styles

* remove comments

* update helm values

* remove api key from help values

--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -10,6 +10,11 @@ $govuk-page-width: $moj-page-width;
 @import '@ministryofjustice/frontend/moj/all';
 @import '@ministryofjustice/hmpps-connect-dps-components/dist/assets/footer';
 @import '@ministryofjustice/hmpps-connect-dps-components/dist/assets/header-bar';
+@import '@ministryofjustice/hmpps-connect-dps-shared-items/dist/assets/dps/components/address-autosuggest/address-autosuggest';
 
 @import './components/header-bar';
 @import './views/applications';
+
+.hmpps-display-none {
+  display: none !important;
+}
