adding feature flag for the log method page

--- a/server/views/pages/log-application/application-details/index.njk
+++ b/server/views/pages/log-application/application-details/index.njk
@@ -21,7 +21,7 @@
       <div class="govuk-grid-column-two-thirds">
         {{ govukBackLink({
           text: "Back",
-          href: "/log/method"
+          href: backLink
         }) }}
 
         {{ renderErrorSummary(errors) }}
