--- a/server/views/pages/log-application/select-logging-method/index.njk
+++ b/server/views/pages/log-application/select-logging-method/index.njk
@@ -49,7 +49,7 @@
             },
             {
               value: "webcam",
-              text: "Upload image of the paper application",
+              text: "Take a photo of the paper application",
               checked: selectedLogMethod === "webcam"
             }
           ],
