--- a/assets/scss/views/_applications.scss
+++ b/assets/scss/views/_applications.scss
@@ -149,3 +149,108 @@
     }
   }
 }
+
+.hmpps-image-cropper-button-text > img {
+  margin-right: 8px;
+}
+
+.hmpps-cropper-photo-container__photo > cropper-canvas {
+  margin-bottom: 3px;
+}
+
+.hmpps-cropper-photo-container__controls__half-width {
+  border: 0;
+  width: 109px !important;
+}
+
+.hmpps-cropper-photo-container__controls__full-width {
+  border: 0px;
+  height: 38px;
+}
+
+#photo-preview {
+  margin-bottom: 0;
+}
+
+$hmpps-cropper-width: 221px;
+$hmpps-cropper-height: 276px;
+
+.hmpps-cropper-photo-container {
+  border: 1px solid $govuk-border-colour;
+  width: 100%;
+  @include govuk-responsive-padding(2);
+  @include govuk-responsive-margin(6, 'bottom');
+
+  &__content {
+    display: flex;
+  }
+
+  &__photo-preview {
+    img {
+      width: $hmpps-cropper-width;
+      height: $hmpps-cropper-height;
+    }
+  }
+
+  &__description {
+    @include govuk-responsive-padding(2, 'top');
+    margin-left: 24px;
+
+    h2 {
+      @include govuk-responsive-margin(3, 'bottom');
+    }
+  }
+
+  &__controls {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    &__full-width {
+      width: 100%;
+    }
+
+    &__half-width {
+      width: calc(($hmpps-cropper-width/2) - 3px);
+    }
+  }
+
+  cropper-canvas {
+    width: $hmpps-cropper-width;
+    height: $hmpps-cropper-height;
+  }
+
+  cropper-selection {
+    outline: 1px solid $govuk-focus-colour;
+  }
+
+  $handles: 'n-resize', 'ne-resize', 'e-resize', 'se-resize', 's-resize', 'sw-resize', 'w-resize', 'nw-resize';
+  @each $handle in $handles {
+    cropper-handle[action='#{$handle}']::after {
+      background-color: $govuk-focus-colour;
+    }
+  }
+}
+
+#photo-cropper-container,
+#photo-preview-container,
+#rotate-button-group {
+  display: none;
+}
+
+.hmpps-button__toggle-crop,
+.hmpps-button__rotate-clockwise {
+  margin-bottom: 0 !important;
+}
+
+.hmpps-image-cropper-button-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+
+  img {
+    width: auto;
+    height: auto;
+  }
+}
