--- a/server/views/pages/log-application/another-photo/index.njk
+++ b/server/views/pages/log-application/another-photo/index.njk
@@ -1,5 +1,8 @@
 {% extends "../../../partials/layout.njk" %}
+{% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
+{% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% set pageTitle = applicationName + " - " + title %}
 {% set mainClasses = "app-container govuk-body applications-landing-page" %}
@@ -12,12 +15,49 @@
 
         {{ govukBackLink({
           text: "Back",
-          href: "/log/method"
+          href: backLink
         }) }}
+
+         {% if errorSummary %}
+          {{ govukErrorSummary ({
+            titleText: "There is a problem",
+            errorList: errorSummary
+          }) }}
+        {% endif %}
         
         <span class="govuk-caption-xl">{{ applicationType }}</span>
-        <h1 class="govuk-heading-xl govuk-!-margin-top-0">{{ title }}</h1>
+        <form method="POST" id="addAnotherPhoto">
+          <input type="hidden" name="_csrf" value="{{ csrfToken }}"/>
 
+          {{ govukRadios({
+            name: "addAnotherPhoto",
+            fieldset: {
+              legend: {
+                text: title,
+                isPageHeading: true,
+                classes: "govuk-fieldset__legend--xl"
+              }
+           },
+           items: [
+            {
+              value: "yes",
+              text: "Yes",
+              checked: addAnotherPhoto === "yes"
+            },
+            {
+              value: "no",
+              text: "No",
+              checked: addAnotherPhoto === "no"
+            }
+          ],
+           errorMessage: { text: errorMessage } if errorMessage else undefined
+          }) }}
+          
+          {{ govukButton({
+            text: "Continue",
+            preventDoubleClick: true
+          }) }}
+        </form>
       </div>
     </div>
   </div>
