--- a/server/views/pages/log-application/additional-photo-details/index.njk
+++ b/server/views/pages/log-application/additional-photo-details/index.njk
@@ -1,29 +1,51 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/character-count/macro.njk" import govukCharacterCount %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
-{% from "govuk/components/input/macro.njk" import govukInput %}
-{% from "govuk/components/textarea/macro.njk" import govukTextarea %}
-
+{% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% extends "../../../partials/layout.njk" %}
-
 {% set pageTitle = applicationName + " - " + title %}
 {% set mainClasses = "app-container govuk-body applications-landing-page" %}
-
 {% block content %}
   <div class="govuk-body govuk-width-container">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
+
         {{ govukBackLink({
           text: "Back",
           href: backLink
         }) }}
 
-      <span class="govuk-caption-xl">{{ applicationType }}</span>
+        {% if errorSummary %}
+          {{ govukErrorSummary({
+            titleText: "There is a problem",
+            errorList: errorSummary
+          }) }}
+        {% endif %}
 
-      <h1 class="govuk-heading-xl govuk-!-margin-top-0">Enter additional details</h1>
+        <span class="govuk-caption-xl">{{ applicationType }}</span>
 
-           
+        <h1 class="govuk-heading-xl govuk-!-margin-top-0">Enter additional details</h1>
+        
+        <form method="POST" id="additional-photo-details">
+          <input type="hidden" name="_csrf" value="{{ csrfToken }}"/> {{ govukCharacterCount({
+            name: "additionalDetails",
+            id: "additionalDetails",
+            maxlength: 1000,
+            threshold: 75,
+            value: additionalDetails or "",
+            label: {
+              text: "Add additional details about this application (optional)",
+              classes: "govuk-label--s",
+              isPageHeading: false
+            },
+            errorMessage: errors.Details
+          }) }}
+          {{ govukButton({
+            text: "Continue",
+            classes: "govuk-button--primary"
+          }) }}
+        </form>
       </div>
     </div>
   </div>
-{% endblock %}  
+{% endblock %}
