fixing back button and refactoring

--- a/server/views/pages/log-application/photo-capture/index.njk
+++ b/server/views/pages/log-application/photo-capture/index.njk
@@ -27,7 +27,7 @@
 
         {{ govukBackLink({
           text: "Back",
-          href: "/log/method"
+          href: backLink
         }) }}
         
         <span class="govuk-caption-xl">{{ applicationType }}</span>
