--- a/server/views/pages/log-application/confirm-photo/index.njk
+++ b/server/views/pages/log-application/confirm-photo/index.njk
@@ -35,7 +35,7 @@
         {{ govukBackLink({
           text: "Back",
           classes: "govuk-!-margin-0",
-          href: "/log/photo-capture"
+          href: backLink
         }) }}
       </div>
     </div>
